# chat-app-server

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
migrations/: 20241001123941_user_data.sql
nginx/: Dockerfile  nginx.conf  ssl.conf
nginx/ssl/: Docs.md  README.md  server.crt  server.csr  server.key  server.password
signed-certs/: Docs.md
src/: auth.rs  chat.rs  database.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  room.rs  route.rs  services.rs  users.rs  util.rs
src/auth/: services.rs
src/chat/: services.rs
src/database/: rooms_db.rs  users_db.rs
src/domain/entity/: access_token.rs  auth_payload.rs  chat.rs  claims.rs  create_room.rs  create_user_payload.rs  mod.rs  pub_user_info.rs  room.rs  room_info.rs  user.rs
src/domain/repository/: error.rs  mod.rs  room_repository.rs  user_repository.rs
src/domain/service/: auth_service.rs  chat_service.rs  error.rs  mod.rs  room_service.rs  user_service.rs
src/domain/service/util/: mod.rs  password_hash_service.rs  token_service.rs  uuid_gen.rs
src/handlers/: auth.rs  auth_handlers.rs  chat.rs  chat_handler.rs  room.rs  room_handlers.rs  user_handlers.rs  users.rs
src/infrastructure/repository/: mod.rs  room_repository_impl.rs  user_repository_impl.rs
src/infrastructure/service/: mod.rs  password_hash_service_impl.rs  token_service_impl.rs  uuid_gen_impl.rs
src/models/: auth_model.rs  chat_model.rs  rooms_model.rs  user_model.rs
src/room/: database.rs  services.rs
src/services/: auth.rs  chat_ws.rs  rooms.rs  user.rs
src/users/: database.rs  service.rs
