[package]
name = "chat_app_api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.82"
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
http = "1.1.0"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
rand_core = "0.6.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["net", "rt", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
